--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  background-color: #f4f4f4;
 }
 
 .shop_header {
@@ -105,6 +106,73 @@ html, body {
   cursor: pointer;
   background-color: #f1d4d4;
   color: rgb(112, 9, 9);
+}
+
+.banner {
+  width: 100%;
+  height: 200px;
+  background: url("./images/banner.jpeg") no-repeat;
+  background-size: cover;
+}
+
+.head-section {
+  width: 200px;
+  border-bottom: 1px solid tomato;
+  margin: 40px auto;
+}
+.head-section h1 {
+  font-size: 24px;
+  text-align: center;
+  padding: 2px 0;
+  margin: 0;
+  color: #555555;
+}
+
+.container {
+  width: 912px;
+  margin: 0 auto;
+}
+
+.cart {
+  width: 280px;
+  background-color: #fff;
+  border-radius: 3px;
+  float: left;
+  margin: 15px 4px;
+  transition: all 0.3s;
+  height: 400px;
+}
+
+.cart:hover {
+  box-shadow: 3px 3px 9px 0px rgba(74, 74, 74, 0.5);
+}
+
+.cart h2 {
+  font-size: 18px;
+  text-align: center;
+}
+
+.cart h2 a {
+  color: #C0392B;
+  text-decoration: none;
+  transition: all 0.2s;
+}
+
+.cart h2 a:hover {
+  color: #9e0000;
+}
+
+.cart .cart-image {
+  width: 100%;
+}
+
+.cart .cart-image img {
+  width: 100%;
+  border-radius: 3px 3px 0 0;
+}
+
+.cart .cart-body {
+  padding: 6px;
 }
 
 .clearfix {
