--- a/style.css
+++ b/style.css
@@ -5,6 +5,21 @@ html, body {
   background-color: #f4f4f4;
 }
 
+.bg-blue {
+  background-color: #3498DB;
+  color: #fff;
+}
+
+.bg-red {
+  background-color: #E74C3C;
+  color: #fff;
+}
+
+.bg-orange {
+  background-color: #F39C12;
+  color: #fff;
+}
+
 .shop_header {
   background: linear-gradient(to bottom,  #9e0000 1%,#d82d2d 100%);
   color: #ECF0F1;
@@ -140,7 +155,7 @@ html, body {
   float: left;
   margin: 15px 4px;
   transition: all 0.3s;
-  height: 400px;
+  height: 370px;
 }
 
 .cart:hover {
@@ -153,7 +168,7 @@ html, body {
 }
 
 .cart h2 a {
-  color: #C0392B;
+  color: #3c3c3c;
   text-decoration: none;
   transition: all 0.2s;
 }
@@ -173,6 +188,96 @@ html, body {
 
 .cart .cart-body {
   padding: 6px;
+}
+
+.cart-categories a {
+  display: inline-block;
+  text-decoration: none;
+  padding: 5px;
+  border-radius: 5px;
+  margin: 1px;
+  font-size: 12px;
+  transition: all 0.2s;
+}
+
+.cart-categories span {
+  display: block;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+.cart-categories a:hover {
+  opacity: 0.8;
+}
+
+.cart-price-info {
+  margin: 30px 0 5px 0;
+}
+.cart-price {
+  float: left;
+  font-size: 16px;
+  font-weight: bold;
+  color: #555555;
+}
+.cart-price span {
+  color: #C0392B;
+}
+
+.cart-basket {
+  float: right;
+  margin-right: 5px;
+  position: relative;
+  top: -10px;
+}
+
+.cart-basket a {
+  font-size: 28px;
+  color: #9e0000;
+}
+
+.footer {
+  background-color: #95A5A6;
+  padding: 10px 0 0 0;
+  border-top: 5px solid #34495E;
+  margin-top: 20px;
+}
+
+.footer-links {
+  float: left;
+  margin: 0 50px;
+  text-align: left;
+}
+
+.footer-links h3 {
+  color: #34495E;
+  font-size: 20px;
+}
+
+.footer-links ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer-links ul li {
+  line-height: 25px;
+}
+.footer-links ul a {
+  text-decoration: none;
+  color: #2C3E50;
+}
+
+.footer-links ul a:hover {
+  color: #ECF0F1;
+}
+
+.copyright {
+  margin-top: 20px;
+  padding: 15px;
+  color: #ECF0F1;
+  background-color: #2C3E50;
+  text-align: center;
+  font-size: 14px;
 }
 
 .clearfix {
