--- a/style.css
+++ b/style.css
@@ -280,6 +280,74 @@ html, body {
   font-size: 14px;
 }
 
+.product {
+  margin: 50px 0 20px 0;
+}
+
+.product-image {
+  float: left;
+  width: 400px;
+}
+
+.product-image img {
+  width: 100%;
+}
+
+.product-info {
+  float: right;
+}
+
+.product-info h1 {
+  padding: 0;
+  margin: 0;
+  font-size: 24px;
+  text-align: center;
+}
+
+.product-info table {
+  text-align: left;
+  margin-top: 50px;
+}
+
+.product-info table th, .product-info table td {
+  border-bottom: 1px solid #9d9d9d;
+  width: 200px;
+  padding: 8px 0;
+}
+
+.product-price {
+  margin-top: 20px;
+  font-size: 18px;
+}
+
+.product-cnt {
+  width: 80px;
+  padding: 5px;
+}
+
+.product-add {
+  background-color: #9e0000;
+  color: #fff;
+  border-radius: 3px;
+  border: none;
+  padding: 7px;
+  transition: all 0.3s;
+}
+.product-add:hover {
+  background-color: #E74C3C;
+  cursor: pointer;
+}
+
+.product-actions {
+  margin-top: 30px;
+}
+
+.similar-head {
+  margin-top: 50px;
+  font-size: 18px;
+  border-bottom: 1px solid #ccc;
+}
+
 .clearfix {
   clear: both;
 }
